--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,8 @@
     "**/.DS_Store": true,
     "**/Thumbs.db": true,
     "node_modules": true,
-    "**/routeTree.gen.ts": true
+    "**/routeTree.gen.ts": true,
+    "dist": true
   },
   "files.readonlyInclude": {
     "**/routeTree.gen.ts": true
